--- a/assets/scss/components/_colorcube.scss
+++ b/assets/scss/components/_colorcube.scss
@@ -54,6 +54,15 @@
       width: 6em;
     }
 
+    &__submit {
+
+      padding-top: .75rem;
+
+      @media (max-width: bp(medium)) {
+        padding-top: 1.5rem;
+      }
+    }
+
     &__button {
       border: 0;
       cursor: pointer;
@@ -63,6 +72,10 @@
       text-transform: uppercase;
       transition: $transition;
       -webkit-appearance: none;
+
+      @media (max-width: bp(large)) {
+        padding: 0.5rem 3.5rem
+      }
     }
 
     .g__col {
