--- a/assets/scss/components/_history.scss
+++ b/assets/scss/components/_history.scss
@@ -1,4 +1,7 @@
 .input-history {
+
+  padding-bottom: 1rem;
+
   h3 {
     span {
       color: $link-color__dark;
